Game API: Add endpoints to update config & icon, add Docker volume.